--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     </head>
     <div class='content'>
     <p>
-        Kean is cheerful. Kean is Gwapo.
+        21 years old
+        Lives in Davao City PH
     </p>
 </div>
 </body>
