--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
     </head>
     <div class='content'>
     <p>
-        21 years old
+        Age:21 years old
         Lives in Davao City PH
+        Bachelor of Science in Information Technology
     </p>
 </div>
 </body>
