--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img src="logo.png"
             </div>
             <ul>
-                <li><a class="active">Home</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a class="active">Tribute</a></li>
                 <li><a href="#">Gallery</a></li>
+                <li><a href="#"></a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Context</a></li>
             </ul>
