--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <ul>
                 <li><a class="active">Tribute</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Context</a></li>
+                <li><a href="#">Restaurant</a></li>
+                <li><a href="#">Forms</a></li>
+                <li><a href="#">Trends</a></li>
             </ul>
 
         </div>
