--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
 
         </div>
             <div class="button">
-                <a href="#" class="btn">MORE INFO</a>
+                <a href="#" class="btn">More info</a>
+                <a href="#" class="btno">Contact Me</a>
+
             </div>
 
 
 
         </div>
         <div class="Kiyan">
-        <img src="Kiyan.png"
+        <img src="Kiyan.png">
         </div>
+
 
 
     </head>
     <div class='content'>
     <p>
-        Age:21 years old
-        Lives in Davao City PH
-        Bachelor of Science in Information Technology
+        Kean Amparado - Graphic Designer, Video Editor, Motion Graphics Artist and Web Designer.
     </p>
 </div>
 </body>
