--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         </div>
         <div class="Kiyan">
+            <div class="box glowing"></div>
         <img src="Kiyan.png">
         </div>
 
