--- a/DEMOPAGES/Tribute/Tribute.html
+++ b/DEMOPAGES/Tribute/Tribute.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Tribute.css">
-    <title>Document</title>
+    <title>Kean Isidore</title>
 </head>
 <body>
+    <div id="slideshow">
+        <div class="container">
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </div>   
+
     
 </body>
 </html>
