--- a/DEMOPAGES/Tribute/Tribute.html
+++ b/DEMOPAGES/Tribute/Tribute.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="slideshow">
+        <div class="container">
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </div>
     
 </body>
 </html>
