--- a/DEMOPAGES/Tribute/Tribute.html
+++ b/DEMOPAGES/Tribute/Tribute.html
@@ -8,14 +8,18 @@
     <title>Tribute</title>
 </head>
 <body>
-    <div id="slideshow">
-        <div class="container">
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-            <section></section>
-        </div>
+    <div class="Sam">
+    <img src="Sam_Edit_Banner_1600x800.progressive.jpg">
+    </div>
+    <h1>Sam Kolder (Video Editor/Volgger)</h1>
+    <p>
+        Who is Sam Kolder?
+    </p>
+    <p>-Sam Kolder is a popular Canadian travel and lifestyle vlogger, 
+        content creator, cinematographer, and social media influencer.</p>
+    <p>-Sam Kolder is a Slaylebrity Instagram star who has amassed over 941K followers on Instagram. He was Born February 1996, and is currently 22 years old. Kolder's birth sign is Aquarius. The Filmmaker, editor and photographer was hired to be the head of video of Beautiful Destinations.</p>
+    <p>The Filmmaker, editor and photographer was hired to be the head of video of Beautiful Destinations. The Beautiful Destinations Instagram account has more than 11.1 million followers as of June 2018.</p>
+
     
 </body>
 </html>
