--- a/DEMOPAGES/Restaurant/myRestaurant.html
+++ b/DEMOPAGES/Restaurant/myRestaurant.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="Restuarant.css">
+    <title>My Restaurant</title>
 </head>
 <body>
-<nav class="border"></nav>
-    
+    <head>
+        <div class="main">
+            <div class="logo">
+                <img src="logo.png"
+            </div>
+
+            <head>
+            <ul>
+                <li><a class="active">Orders</a></li>
+                <li><a href="#">Delivery</a></li>
+                <li><a href="#">Food</a></li>
+                <li><a href="#">Dessert</a></li>
+                <li><a href="#">Location</a></li>
+            </ul>
+            </head>
+            <div class="BURG">
+            <img src="burger and title.png">
+            </div>
+
+
 </body>
 </html>
