--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="logo">
                 <img src="logo.png"
             </div>
+            <head>
             <ul>
                 <li><a class="active">Tribute</a></li>
                 <li><a href="#">Gallery</a></li>
@@ -21,6 +22,7 @@
                 <li><a href="#">Forms</a></li>
                 <li><a href="#">Trends</a></li>
             </ul>
+            </head>
 
         </div>
             <div class="button">
