--- a/DEMOPAGES/forms/vaccination.html
+++ b/DEMOPAGES/forms/vaccination.html
@@ -8,7 +8,7 @@
     <title>Vaccination Form</title>
 </head>
 <body>
-    <h3>COVID VACCINATION</h3>
+    <h3>COVID VACCINATION FORM</h3>
     <div class="BAKUNA">
         <img src="bakuna.png">
         </div>
