--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -19,7 +19,7 @@
         <h1>Photo Gallery</h1>
     </div>
     <div class="button">
-        <a href="D:\WEB\KEANISIDOREAMPARADO\DEMOPAGES\Gallery\BioHealth.html" class="btn">Bio and Health</a>
+        <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/BioHealth.html" class="btn">Bio and Health</a>
         <a href="#" class="btn">Learning</a>
         <a href="#" class="btn">Smart IoT Applications</a>
     </div>
