--- a/DEMOPAGES/Gallery/Learning.html
+++ b/DEMOPAGES/Gallery/Learning.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="BioHealth.css">
-    <title>Bio Health</title>
+    <title>Learning</title>
 </head>
 <body>
-    <h1>SMART INHALERS</h1>
-    <div class="button"></div>
-    <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#" class="Back">Back</a>
-  </div>
+    <h1>Interactive whiteboard for classroom</h1>
     <p>
-        'Smart' inhalers are inhalers with extra digital features – they link to an app on your phone or tablet to help you and your doctor manage your asthma better. At the moment there are lots of products in development, but you can't get them from your GP just yet.</p>
+        An interactive smart board, also known as an electronic whiteboard, is a classroom tool that allows images from a computer screen to be displayed onto a classroom board using a digital projector. The teacher or a student can “interact” with the images directly on the screen using a tool or even a finger.</p>
+        <div class="button"></div>
+        <a href="" class="Back">Smart IoT Applications</a>
+      </div>
         <div class = "gallery">
         <div class="clipped-border">
           <img src="Smart-Inhalers.jpg">
@@ -32,6 +32,8 @@
         </div>
         <div class = "shadow"></div>
       </div>
-
+      <div class="button"></div>
+      <a href="" class="Back">Smart IoT Applications</a>
+    </div>
 </body>
 </html>
