--- a/DEMOPAGES/Gallery/Learning.html
+++ b/DEMOPAGES/Gallery/Learning.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>Interactive whiteboard for classroom</h1>
+    <div class="button"></div>
+    <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#" class="Back">Back</a>
+  </div>
     <p>
         An interactive smart board, also known as an electronic whiteboard, is a classroom tool that allows images from a computer screen to be displayed onto a classroom board using a digital projector. The teacher or a student can “interact” with the images directly on the screen using a tool or even a finger.</p>
-        <div class="button"></div>
-        <a href="" class="Back">Smart IoT Applications</a>
-      </div>
+
         <div class = "gallery">
         <div class="clipped-border">
           <img src="Smart-Inhalers.jpg">
@@ -32,8 +33,6 @@
         </div>
         <div class = "shadow"></div>
       </div>
-      <div class="button"></div>
-      <a href="" class="Back">Smart IoT Applications</a>
-    </div>
+
 </body>
 </html>
