--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -13,14 +13,14 @@
             <section>Bio <img src="science.jpg" alt="" srcset=""></section> 
             <section>Health <img src="science.jpg" alt="" srcset=""></section>
             <section>Learning  <img src="20170301futurelearning.jpg" alt="" srcset=""></section>
-            <section>Smart IoT Applications <img src="download.jfif" alt="" srcset=""</section>
+            <section>Smart IoT Applications <img src="download.jfif" alt="" srcset=""></section>
         </div>
     <div class="title">
         <h1>Photo Gallery</h1>
     </div>
     <div class="button">
         <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/BioHealth.html" class="btn">Bio and Health</a>
-        <a href="#" class="btn">Learning</a>
+        <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Learning.html" class="btn">Learning</a>
         <a href="#" class="btn">Smart IoT Applications</a>
     </div>
    
