--- a/DEMOPAGES/Gallery/Learning.html
+++ b/DEMOPAGES/Gallery/Learning.html
@@ -17,19 +17,19 @@
 
         <div class = "gallery">
         <div class="clipped-border">
-          <img src="Smart-Inhalers.jpg">
+          <img src="61801.png">
         </div>
         <div class="clipped-border">
-          <img src="propeller-main-img2019_lg.jpg">
+          <img src="coverr.webp">
         </div>
         <div class="clipped-border">
-          <img src="shutterstock_1604282626.jpg">
+          <img src="IMG_2311-e1547695762204-900x600.jpg">
         </div>
           <div class="clipped-border">
-          <img src="6076559dc4663f42c85fafea_Smart-Inhaler.png" id="clipped">
+          <img src="THIS-ONE-IS-BEST-e1558676381856.png" id="clipped">
         </div>
           <div class="clipped-border">
-          <img src="sensor.jpg" id="clipped">
+          <img src="images.jfif" id="clipped">
         </div>
         <div class = "shadow"></div>
       </div>
