--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -10,10 +10,10 @@
 <body>
     <div id="slideshow">
         <div class="container">
-            <section>Bio <img src="science.jpg" alt="" srcset=""></section> 
-            <section>Health <img src="science.jpg" alt="" srcset=""></section>
-            <section>Learning  <img src="20170301futurelearning.jpg" alt="" srcset=""></section>
-            <section>Smart IoT Applications <img src="download.jfif" alt="" srcset=""></section>
+            <section> <img src="science.jpg" alt="" srcset=""></section> 
+            <section> <img src="sensor.jpg" alt="" srcset=""></section>
+            <section>  <img src="THIS-ONE-IS-BEST-e1558676381856.png" alt="" srcset=""></section>
+            <section> <img src="download.jfif" alt="" srcset=""></section>
         </div>
     <div class="title">
         <h1>Photo Gallery</h1>
