--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -21,7 +21,7 @@
     <div class="button">
         <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/BioHealth.html" class="btn">Bio and Health</a>
         <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Learning.html" class="btn">Learning</a>
-        <a href="#" class="btn">Smart IoT Applications</a>
+        <a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/SmartIotApplications.html" class="btn">Smart IoT Applications</a>
     </div>
    
     
