--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
             <div class="button">
-                <a href="#" class="btn">More info</a>
+                <a href="https://kiyan15.github.io/KeanIsidoreAmparado/myreviewonecmascript.html#" class="btn">REVIEW ECMA</a>
                 <a href="#" class="btno">Contact Me</a>
 
             </div>
