--- a/myreviewonecmascript.html
+++ b/myreviewonecmascript.html
@@ -21,7 +21,13 @@
 <div class="history">
 <img  src="1_6sDRYpNGjN_GHy3ueIRGCA.png">
 </div>
-<p>The ECMAScript standard is the foundation for languages like Javascript, and ECMAScript is a subset of JavaScript. At its foundation, JavaScript is ECMAScript, although it extends it. ECMAScript is a scripting language standard. </p>
-
+<p>The ECMAScript standard is the foundation for languages like Javascript, and ECMAScript is a subset of JavaScript. At its foundation, JavaScript is ECMAScript, although it extends it. ECMAScript is a scripting language standard. As an example, AS/JS/JScript are three distinct automobiles, yet they all share the same engine. Their exteriors, however, are distinct, and each has undergone various modifications to make it unique.</p>
+<div class="titlecma">
+<h1> ECMAScript = ES: </h1>
+<div class="history">
+    <img  src="1_oOGRlsUKFH2zOUg_jD-R9w.jpeg">
+    </div>
+<p>JavaScript is a general-reason scripting language that conforms to the ECMAScript specification. The ECMAScript specification is a blueprint for developing a scripting language. JavaScript is an implementation of that blueprint. On the whole, JavaScript implements the ECMAScript specification as defined in ECMA-262.</p>
+</div>
 </body>
 </html>
