--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <head>
+
         <div class="main">
             <div class="logo">
-                <img src="logo.png"
+                <h1>kiyan</h1>
             </div>
             <head>
             <ul>
@@ -23,6 +24,14 @@
                 <li><a href="#">Trends</a></li>
             </ul>
             </head>
+        </div>
+            <div class="name">
+                <h1>Kean Isidore Amparado</h1>
+
+        </div>
+            <div class="Kiyan">
+                <img src="fffffff.png">
+            </div>
 
         </div>
             <div class="button">
@@ -33,11 +42,6 @@
 
 
 
-        </div>
-        <div class="Kiyan">
-            <div class="box glowing"></div>
-        <img src="Kiyan.png">
-        </div>
 
 
 
@@ -47,5 +51,7 @@
         Kean Amparado - Graphic Designer, Video Editor, Motion Graphics Artist and Web Designer.
     </p>
 </div>
+
+
 </body>
 </html>
