--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,49 +8,25 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    <head>
-
-        <div class="main">
-            <div class="logo">
-                <h1>kiyan</h1>
-            </div>
-            <head>
+    <section>
+        <nav class="fill"> 
+            <a href="#" class="logo">Kiyan.</a>
             <ul>
-                <li><a class="active">Tribute</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="#">Restaurant</a></li>
-                <li><a href="#">Forms</a></li>
-                <li><a href="#">Trends</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Achievements</a></li>
             </ul>
-            </head>
+        </nav>
+        <div class="text-container">
+            <p>HELLO,</p>
+            <p>I'M KIYAN</p>
+            <p>A Graphic Designer <br> & Motion Artist.</p>
+            <button  class="hire-btn"><a href="#" class="hire">Hire Me</a></button>
+            <button  class="down-cv"><a href="https://kiyan15.github.io/KeanIsidoreAmparado/myreviewonecmascript.html#" class="Ecma">Ecma</a></button>
         </div>
-            <div class="name">
-                <h1>Kean Isidore Amparado</h1>
-
-        </div>
-            <div class="Kiyan">
-                <img src="fffffff.png">
-            </div>
-
-        </div>
-            <div class="button">
-                <a href="https://kiyan15.github.io/KeanIsidoreAmparado/myreviewonecmascript.html#" class="btn">REVIEW ECMA</a>
-                <a href="#" class="btno">Contact Me</a>
-
-            </div>
-
-
-
-
-
-
-    </head>
-    <div class='content'>
-    <p>
-        Kean Amparado - Graphic Designer, Video Editor, Motion Graphics Artist and Web Designer.
-    </p>
-</div>
-
-
+        <img src="imageBlob.png" class="model" alt="model">
+    </section>
+    
 </body>
 </html>
