--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
         </div>
         <img src="imageBlob.png" class="model" alt="model">
     </section>
+    <div class="about-container">
+        <img src="IMG_E2503-removebg-preview.png" alt="">
+        <div class="about-text">
+            <p>ABOUT ME</p>
+            <p>GRAPHIC DESIGNER, MOTION GRAPHICS ARTIST, and Video Editor</p>
+            <p>-Creative Director at University Student Government of UIC
+               <br>
+               -Former Junior Layout Artist of The Collegiate Immaculate
+            </p>
+            <p></p>
+        </div>
+    </div>
     
 </body>
 </html>
