--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <p>GRAPHIC DESIGNER, MOTION GRAPHICS ARTIST, and Video Editor</p>
             <p>-Creative Director at University Student Government of UIC
                <br>
-               -Former Junior Layout Artist of The Collegiate Immaculate
+               -Former Junior Layout Artist of The Collegiate Immaculate (UIC STUDENT PUBLICATION)
             </p>
             <p></p>
         </div>
