--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="IMG_E2503-removebg-preview.png" alt="">
         <div class="about-text">
             <p>ABOUT ME</p>
-            <p>GRAPHIC DESIGNER, MOTION GRAPHICS ARTIST, and Video Editor</p>
+            <p>Skills: GRAPHIC DESIGNING, MOTION GRAPHICS, and Video Editing.</p>
             <p>-Creative Director at University Student Government of UIC
                <br>
                -Former Junior Layout Artist of The Collegiate Immaculate (UIC STUDENT PUBLICATION)
