--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
                -Former Junior Layout Artist of The Collegiate Immaculate (UIC STUDENT PUBLICATION)
             </p>
             <p></p>
+            <form action="/action_page.php">
+                <label for="fname">SEND YOUR FREELANCE REQUEST</label>
+                <input type="text" id="fname" name="firstname" placeholder="VIDEO/POSTER/MOTION..">
+                <label for="fname">SEND YOUR GMAIL</label>
+                <input type="text" id="fname" name="firstname" placeholder="kiyan@gmail.com">
+                </select>
+                <input type="submit" value="Submit">
+              </form>
         </div>
     </div>
     
