--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <input type="submit" value="Submit">
               </form>
         </div>
+        <img src="online-world-animate.svg" alt="">
     </div>
     
 </body>
