--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <input type="submit" value="Submit">
               </form>
         </div>
+        <div class="animate-svg">
         <img src="online-world-animate.svg" alt="">
+        </div>
     </div>
     
 </body>
