--- a/index.html
+++ b/index.html
@@ -47,8 +47,30 @@
               </form>
         </div>
         <div class="animate-svg">
-        <img src="online-world-animate.svg" alt="">
+        <img src="online-world-animate.svg">
         </div>
+    </div>
+    <div class="table">
+        <h1>My Schedule</h1>
+        <table class="styled-table">
+            <thead>
+                <tr>
+                    <th>Days Available</th>
+                    <th>Days cannot be tapped.</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Saturday</td>
+                    <td>Monday</td>
+                </tr>
+                <tr class="active-row">
+                    <td>Friday</td>
+                    <td>Tuesday-Wednesday</td>
+                </tr>
+                <!-- and so on... -->
+            </tbody>
+        </table>
     </div>
     
 </body>
