--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <nav class="fill"> 
             <a href="#" class="logo">Kiyan.</a>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a href="#">Achievements</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html#">Home</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/forms/vaccination.html">Form</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Restaurant/myRestaurant.html#">Restaurant</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
             </ul>
         </nav>
         <div class="text-container">
