--- a/index.html
+++ b/index.html
@@ -68,9 +68,14 @@
                     <td>Friday</td>
                     <td>Tuesday-Wednesday</td>
                 </tr>
-                <!-- and so on... -->
+                
             </tbody>
         </table>
+        <div class="box container">
+            <div class="box-1"></div>
+            <div class="box-2"></div>
+            <div class="box-3"></div>
+        </div>
     </div>
     
 </body>
