--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
             <div class="box-3"></div>
         </div>
     </div>
+    <footer>
+        <p>Going To Internet</p>
+            <div class="social-icons">
+                <a href="#"></a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
+    </footer>
     
 </body>
 </html>
