--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Portfolio</title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section>
@@ -77,14 +78,21 @@
             <div class="box-3"></div>
         </div>
     </div>
+</div>
     <footer>
-        <p>Going To Internet</p>
+        <p>Kean Isidore Amparado</p>
+        <p>Motion Graphics, Pubmats, Creative Videos and Website Designer</p>
             <div class="social-icons">
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
             </div>
+            <p class="year">Year-2021</p>
     </footer>
-    
+    <div class="ab-social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+    </div>
 </body>
 </html>
