--- a/myreviewonecmascript.html
+++ b/myreviewonecmascript.html
@@ -8,26 +8,38 @@
     <title>Review on Ecma Street</title>
 </head>
 <body>
-    <h1>VIDEO MATERIALS</h1>
-    <div class="button"></div>
-    <a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html" class="Back">Back</a>
-  </div>
-    <div class="vid">
-<iframe  width="400" height="300" src="https://www.youtube.com/embed/NQUjEo9iqfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/Nda34efbxhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="400" height="300" src="https://www.youtube.com/embed/YG4-l3VaOWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div> 
-<h2>Review about the history of EcmaScript</h2>
-<div class="history">
-<img  src="1_6sDRYpNGjN_GHy3ueIRGCA.png">
-</div>
-<p>The ECMAScript standard is the foundation for languages like Javascript, and ECMAScript is a subset of JavaScript. At its foundation, JavaScript is ECMAScript, although it extends it. ECMAScript is a scripting language standard. As an example, AS/JS/JScript are three distinct automobiles, yet they all share the same engine. Their exteriors, however, are distinct, and each has undergone various modifications to make it unique.</p>
-<div class="titlecma">
-<h2> ECMAScript = ES: </h2>
-<div class="history">
-    <img  src="1_oOGRlsUKFH2zOUg_jD-R9w.jpeg">
+    <section>
+        <nav class="fill"> 
+            <a href="#" class="logo">Kiyan.</a>
+            <ul>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
+                <li><a href="">Form</a></li>
+                <li><a href="">Restaurant</a></li>
+                <li><a href="">Gallery</a></li>
+            </ul>
+        </nav>
+        <h1>VIDEO MATERIALS</h1>
+        <div class="button"></div>
+        <a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html" class="Back">Back</a>
+      </div>
+        <div class="vid">
+    <iframe  width="400" height="300" src="https://www.youtube.com/embed/NQUjEo9iqfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400" height="300" src="https://www.youtube.com/embed/Nda34efbxhM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="400" height="300" src="https://www.youtube.com/embed/YG4-l3VaOWc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div> 
+    <h2>Review about the history of EcmaScript</h2>
+    <div class="history">
+    <img  src="1_6sDRYpNGjN_GHy3ueIRGCA.png">
     </div>
-<p>JavaScript is a general-reason scripting language that conforms to the ECMAScript specification. The ECMAScript specification is a blueprint for developing a scripting language. JavaScript is an implementation of that blueprint. On the whole, JavaScript implements the ECMAScript specification as defined in ECMA-262.</p>
-</div>
+    <p>The ECMAScript standard is the foundation for languages like Javascript, and ECMAScript is a subset of JavaScript. At its foundation, JavaScript is ECMAScript, although it extends it. ECMAScript is a scripting language standard. As an example, AS/JS/JScript are three distinct automobiles, yet they all share the same engine. Their exteriors, however, are distinct, and each has undergone various modifications to make it unique.</p>
+    <div class="titlecma">
+    <h2> ECMAScript = ES: </h2>
+    <div class="history">
+        <img  src="1_oOGRlsUKFH2zOUg_jD-R9w.jpeg">
+        </div>
+    <p>JavaScript is a general-reason scripting language that conforms to the ECMAScript specification. The ECMAScript specification is a blueprint for developing a scripting language. JavaScript is an implementation of that blueprint. On the whole, JavaScript implements the ECMAScript specification as defined in ECMA-262.</p>
+    </div>
+    </section>
+
 </body>
 </html>
