--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" type="text/css" href="Gallery.css">
 </head>
 <body>
+    <section>
+        <nav class="fill"> 
+            <a href="#" class="logo">Kiyan.</a>
+            <ul>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
+                <li><a href="">Form</a></li>
+                <li><a href="">Restaurant</a></li>
+                <li><a href="">Gallery</a></li>
+            </ul>
+        </nav>
+        </section>
     <div id="slideshow">
         <div class="container">
             <section> <img src="science.jpg" alt="" srcset=""></section> 
