--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
                 <li><a href="">Form</a></li>
                 <li><a href="">Restaurant</a></li>
-                <li><a href="">Gallery</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
             </ul>
         </nav>
         <div class="text-container">
