--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
                 <li><a href="">Form</a></li>
-                <li><a href="">Restaurant</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Tribute/Tribute.html">Tribute</a></li>
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
             </ul>
         </nav>
