--- a/DEMOPAGES/forms/vaccination.html
+++ b/DEMOPAGES/forms/vaccination.html
@@ -8,6 +8,16 @@
     <title>Vaccination Form</title>
 </head>
 <body>
+  <section>
+    <nav class="fill"> 
+        <a href="#" class="logo">Kiyan.</a>
+        <ul>
+            <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
+            <li><a href="">Form</a></li>
+            <li><a href="">Tribute</a></li>
+            <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
+        </ul>
+    </nav>
     <h3>COVID VACCINATION FORM</h3>
     <div class="BAKUNA">
         <img src="bakuna.png">
@@ -25,7 +35,7 @@
         <input type="text" id="fname" name="firstname" placeholder="Commorbidity..">
 
         <label for="fname">Age</label>
-        <input type="text" id="fname" name="firstname" placeholder="City-Barangay-Village">
+        <input type="text" id="fname" name="firstname" placeholder="12yearsOld-above">
     
         <label for="Location">Location</label>
         <select id="country" name="country">
@@ -36,6 +46,7 @@
         <input type="submit" value="Submit">
       </form>
     </div>
+    </section>
 
 
 
