--- a/DEMOPAGES/forms/vaccination.html
+++ b/DEMOPAGES/forms/vaccination.html
@@ -43,6 +43,12 @@
           <option value="canada">Canada</option>
           <option value="usa">USA</option>
         </select>
+        <label for="Location">Preferred Vaccine</label>
+        <select id="country" name="country">
+          <option value="Philippines">Pfizer</option>
+          <option value="canada">Astrazeneca</option>
+          <option value="usa">Sinovac</option>
+        </select>
         <input type="submit" value="Submit">
       </form>
     </div>
