--- a/DEMOPAGES/Gallery/Gallery.html
+++ b/DEMOPAGES/Gallery/Gallery.html
@@ -13,10 +13,9 @@
             <a href="#" class="logo">Kiyan.</a>
             <ul>
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
-                <li><a href="">Form</a></li>
-                <li><a href="">Restaurant</a></li>
-                <li><a href="">Gallery</a></li>
-            </ul>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/forms/vaccination.html">Form</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Tribute/Tribute.html">Tribute</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
         </nav>
         <div id="slideshow">
             <div class="container">
