--- a/DEMOPAGES/forms/vaccination.html
+++ b/DEMOPAGES/forms/vaccination.html
@@ -12,11 +12,10 @@
     <nav class="fill"> 
         <a href="#" class="logo">Kiyan.</a>
         <ul>
-            <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
-            <li><a href="">Form</a></li>
-            <li><a href="">Tribute</a></li>
-            <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
-        </ul>
+          <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
+          <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/forms/vaccination.html">Form</a></li>
+          <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Tribute/Tribute.html">Tribute</a></li>
+          <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
     </nav>
     <h3>COVID VACCINATION FORM</h3>
     <div class="BAKUNA">
