--- a/DEMOPAGES/Tribute/Tribute.html
+++ b/DEMOPAGES/Tribute/Tribute.html
@@ -13,8 +13,8 @@
             <a href="#" class="logo">Kiyan.</a>
             <ul>
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/index.html">Home</a></li>
-                <li><a href="">Form</a></li>
-                <li><a href="">Tribute</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/forms/vaccination.html">Form</a></li>
+                <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Tribute/Tribute.html">Tribute</a></li>
                 <li><a href="https://kiyan15.github.io/KeanIsidoreAmparado/DEMOPAGES/Gallery/Gallery.html#">Gallery</a></li>
             </ul>
         </nav>
