--- a/DEMOPAGES/forms/vaccination.html
+++ b/DEMOPAGES/forms/vaccination.html
@@ -31,10 +31,10 @@
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
         <label for="fname">Health History</label>
-        <input type="text" id="fname" name="firstname" placeholder="Commorbidity..">
+        <input type="text" id="fname" name="health issues" placeholder="Commorbidity..">
 
         <label for="fname">Age</label>
-        <input type="text" id="fname" name="firstname" placeholder="12yearsOld-above">
+        <input type="text" id="fname" name="age" placeholder="12yearsOld-above">
     
         <label for="Location">Location</label>
         <select id="country" name="country">
