--- a/responsive.html
+++ b/responsive.html
@@ -23,9 +23,9 @@
   </head>
   <body>
    
-    <nav class="navbar navbar-expand-lg bg-warning navbar-dark py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3 fixed-top">
       <div class="container">
-        <a href="#" class="navbar-brand text-dark fw-bold">Frontend Bootcamp</a>
+        <a href="#" class="navbar-brand  fw-bold">Frontend Bootcamp</a>
 
         <button
           class="navbar-toggler"
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#learn" class="nav-link text-dark">What You'll Learn</a>
+              <a href="#learn" class="nav-link">What You'll Learn</a>
             </li>
             <li class="nav-item">
-              <a href="#questions" class="nav-link text-dark">Questions</a>
+              <a href="#questions" class="nav-link ">Questions</a>
             </li>
             <li class="nav-item">
-              <a href="#instructors" class="nav-link text-dark">Instructors</a>
+              <a href="#instructors" class="nav-link ">Instructors</a>
             </li>
           </ul>
         </div>
