--- a/responsive.html
+++ b/responsive.html
@@ -23,7 +23,7 @@
   </head>
   <body>
    
-    <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark py-3 fixed-top">
       <div class="container">
         <a href="#" class="navbar-brand  fw-bold">Frontend Bootcamp</a>
 
