--- a/responsive.html
+++ b/responsive.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Frontend Bootcamp</title>
+    <title>Kiyan Amparado</title>
   </head>
   <body>
    
@@ -39,13 +39,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#learn" class="nav-link">What You'll Learn</a>
+              <a href="#learn" class="nav-link">portfolio</a>
             </li>
             <li class="nav-item">
-              <a href="#questions" class="nav-link ">Questions</a>
+              <a href="#questions" class="nav-link ">Forms</a>
             </li>
             <li class="nav-item">
-              <a href="#instructors" class="nav-link ">Instructors</a>
+              <a href="#instructors" class="nav-link ">Tribute</a>
             </li>
           </ul>
         </div>
